Added code & and the readme

--- a/ML_Present.tex
+++ b/ML_Present.tex
@@ -1,5 +1,5 @@
 \documentclass[]{SangerLibrary/sanger-present}
-\usepackage{../../Papers/JML}
+\usepackage{JML}
 \usetikzlibrary{decorations.pathreplacing,calligraphy}
 \graphicspath{{Images/}}
 
