--- a/ML_notes.tex
+++ b/ML_notes.tex
@@ -10,7 +10,7 @@
 \usepackage{natbib}
 \usepackage{multicol}
 \usepackage{amsmath}
-\usepackage{../../Papers/JML}
+\usepackage{JML}
 \usepackage{amssymb}
 \usetikzlibrary{decorations.pathreplacing,calligraphy}
 
